# dobby

./: .gitignore  CLAUDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  pyrightconfig.json
data/: .gitkeep  .~lock.2025-10-14-1700-alumnos-upload-sn.csv#  Upload_SN.ipynb
src/dobby/: __init__.py  cli.py  constants.py  exceptions.py  logger.py  models.py  transformer.py  validators.py
tests/: test_transformer.py  test_validators.py
